# robotcenter

./: README.md
AvalonOS/: Makefile.am  Makefile.in  aclocal.m4  bootstrap  config.h.in  configure  configure.ac
AvalonOS/autom4te.cache/: output.0  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
AvalonOS/include/avalon/: avalon.hpp.in  avalon.proto  executor.hpp  scheduler.hpp
AvalonOS/ros/src/state_update/: CMakeLists.txt  package.xml
AvalonOS/ros/src/state_update/listener/: listener.cpp
AvalonOS/ros/src/state_update/talker/: talker.cpp
AvalonOS/script/: container-ip  container.conf  master  master-remote  robot.res  ros-fwloc  ros-fwloc-tmp  ros-rtloc  rosservice-gazebo  slave  slave-remote  slave1  slave2  slave3  test-framework
AvalonOS/src/: Makefile.am  Makefile.in
AvalonOS/src/avalon/: main.cpp
AvalonOS/src/common/: attributes.cpp  attributes.hpp  build.cpp  build.hpp  date_utils.cpp  date_utils.hpp  factory.hpp  lock.cpp  lock.hpp  process_utils.hpp  protobuf_utils.hpp  resources.cpp  resources.hpp  robot.hpp  ros.hpp  type_utils.hpp  values.cpp  values.hpp
AvalonOS/src/configurator/: configuration.hpp  configurator.cpp  configurator.hpp  option.hpp
AvalonOS/src/detector/: .detector.cpp.swp  .detector.hpp.swp  detector.cpp  detector.hpp
AvalonOS/src/examples/: test_executor.cpp  test_framework.cpp
AvalonOS/src/exec/: exec.cpp
AvalonOS/src/files/: files.cpp  files.hpp
AvalonOS/src/flags/: flags.hpp
AvalonOS/src/launcher/: executor.cpp  launcher.cpp  launcher.hpp  main.cpp
AvalonOS/src/linux/: cgroups.cpp  fs.cpp  fs.hpp  proc.cpp  proc.hpp
AvalonOS/src/logging/: flags.hpp  logging.cpp  logging.hpp
AvalonOS/src/master/: allocator.hpp  constants.cpp  constants.hpp  flags.hpp  hierarchical_allocator_process.hpp  main.cpp  master.cpp  master.hpp  slaves_manager.hpp
AvalonOS/src/messages/: log.proto  messages.proto  state.proto
AvalonOS/src/sched/: sched.cpp
AvalonOS/src/slave/: cgroups_isolation_module.cpp  cgroups_isolation_module.hpp  constants.cpp  constants.hpp  flags.hpp  gc.cpp  gc.hpp  isolation_module.cpp  isolation_module.hpp  isolation_module_factory.hpp  lxc_isolation_module.cpp  lxc_isolation_module.hpp  main.cpp  paths.hpp  process_based_isolation_module.cpp  process_based_isolation_module.hpp  reaper.cpp  reaper.hpp  slave.cpp  slave.hpp
avalon_simulator/avalon_2dnav_gazebo/: CMakeLists.txt  package.xml
avalon_simulator/avalon_2dnav_gazebo/config/rviz/: multi_robot.rviz  multi_robot.rviz-backup  robot_navigation.rviz
avalon_simulator/avalon_2dnav_gazebo/launch/: avalon_multirobot_navigation_demo.launch  launch_turtlebot_navigation.launch  turtlebot_tf.launch
avalon_simulator/avalon_gazebo/: CMakeLists.txt  package.xml
avalon_simulator/avalon_gazebo/launch/: avalon_multirobot_demo.launch  launch_turtlebot.launch  launch_uav.launch  turtlebot_spawn.launch  uav_spawn.launch
avalon_simulator/avalon_gazebo/launch/includes/: avalon_kobuki.launch.xml  move_base.launch.xml  spawn_quadrotor.launch
avalon_simulator/avalon_gazebo/launch/turtlebot/: amcl_demo.launch
avalon_simulator/avalon_rviz/: CMakeLists.txt  keyboard_teleop.launch  package.xml
avalon_simulator/avalon_rviz/config/: multi_nav.rviz
avalon_simulator/avalon_rviz/launch/: move_base.launch  view_multi_navigation.launch
avalon_simulator/avalon_rviz/launch/include/: asus_xtion_pro_amcl.launch.xml
avalon_simulator/avalon_rviz/maps/stage/: small_office.world
avalon_simulator/avalon_rviz/rviz/: robot.rviz
