<?xml version="1.0"?>
<package>
  <name>avalon_gazebo</name>
  <version>0.0.1</version>
  <description>The gazebo package</description>
  <maintainer email="xuyuan@ict.ac.cn">Yuan Xu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>kobuki_gazebo_plugins</run_depend>
  <run_depend>robot_pose_ekf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>turtlebot_gazebo</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>turtlebot_description</run_depend>
  <run_depend>turtlebot_navigation</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>rospy</run_depend>

</package>
