<?xml version="1.0"?>
<package>
  <name>avalon_rviz</name>
  <version>0.0.1</version>
  <description>The avalon_stage package</description>

  <maintainer email="xuyuan@ict.ac.cn">Yuan Xu</maintainer>
  <license>BSD</license>
  <maintainer email="xuyuan@ict.ac.cn">Yuan Xu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>amcl</run_depend>
  <run_depend>fake_localization</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>pal_navigation_sm</run_depend>
  <run_depend>rviz_plugin_covariance</run_depend>
  <run_depend>turtlebot_rviz_launchers</run_depend>
  <run_depend>turtlebot_teleop</run_depend>

</package>
